[metadata]
name = ansible-role-tripleo-ui
summary = ansible-role-tripleo-ui - Ansible ui role for the TripleO project.
description-file =
    README.md
author = TripleO Team
author-email = jillr@redhat.com
home-page = https://git.openstack.org/cgit/openstack/ansible-role-tripleo-ui
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/roles/tripleo-ui/defaults = defaults/*
    share/ansible/roles/tripleo-ui/meta = meta/*
    share/ansible/roles/tripleo-ui/tasks = tasks/*
    share/ansible/roles/tripleo-ui/templates = templates/*
    share/ansible/roles/tripleo-ui/files = files/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

